--- a/src/css/client.css
+++ b/src/css/client.css
@@ -222,3 +222,11 @@ ul {
     text-align: center;
     font-size: 22px;
 }
+
+.greenBorder {
+    border: 1px solid green;
+}
+
+.greenShadow {
+    box-shadow: 0px 0px 10px 3px green;
+}
